Форма для создания тестов

--- a/Client/Client.csproj
+++ b/Client/Client.csproj
@@ -57,6 +57,9 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <MauiXaml Update="NewPage1.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	  <MauiXaml Update="Администратор.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
