--- a/Server_Test_Users/Server_Test_Users/Server_Test_Users.csproj
+++ b/Server_Test_Users/Server_Test_Users/Server_Test_Users.csproj
@@ -8,8 +8,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="7.0.8" />
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="7.0.0" />
     <PackageReference Include="Npgsql" Version="7.0.4" />
+    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="7.0.4" />
     <PackageReference Include="System.Text.Json" Version="7.0.0" />
   </ItemGroup>
 
