--- a/Client/Client.csproj
+++ b/Client/Client.csproj
@@ -64,6 +64,9 @@
 	  <MauiXaml Update="Администратор.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
+	  <MauiXaml Update="Вопросы.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	  <MauiXaml Update="Вход в учетную запись.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
