форма справочника пользователей с кнопками выбора и редактирования

--- a/Client/Client.csproj
+++ b/Client/Client.csproj
@@ -72,13 +72,13 @@
 	</ItemGroup>
 
 	<ItemGroup>
-	  <Compile Update="Project\QuestionListPage.xaml.cs">
-	    <DependentUpon>QuestionListPage.xaml</DependentUpon>
+	  <Compile Update="Project\RefUserListPage.xaml.cs">
+	    <DependentUpon>RefUserListPage.xaml</DependentUpon>
 	  </Compile>
 	</ItemGroup>
 
 	<ItemGroup>
-	  <MauiXaml Update="Project\QuestionListPage.xaml">
+	  <MauiXaml Update="Project\RefUserListPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
 	  <MauiXaml Update="Questin.xaml">
