Поучение класса user с сервера

--- a/Client/Client.csproj
+++ b/Client/Client.csproj
@@ -72,12 +72,18 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <Compile Update="Project\UserEditor.xaml.cs">
+	    <DependentUpon>UserEditor.xaml</DependentUpon>
+	  </Compile>
 	  <Compile Update="Project\RefUserListPage.xaml.cs">
 	    <DependentUpon>RefUserListPage.xaml</DependentUpon>
 	  </Compile>
 	</ItemGroup>
 
 	<ItemGroup>
+	  <MauiXaml Update="Project\UserEditor.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	  <MauiXaml Update="Project\RefUserListPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
