выделение модели user в отдельных класс

--- a/Class_interaction_Users/Class_interaction_Users.csproj
+++ b/Class_interaction_Users/Class_interaction_Users.csproj
@@ -83,6 +83,7 @@
   <ItemGroup>
     <Compile Include="ComandCL.cs" />
     <Compile Include="Global_class.cs" />
+    <Compile Include="Model.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
