--- a/Client/Client.csproj
+++ b/Client/Client.csproj
@@ -72,8 +72,8 @@
 	</ItemGroup>
 
 	<ItemGroup>
-	  <Compile Update="Project\Doc\DocExamTest\DocUserExamsListPage.xaml.cs">
-	    <DependentUpon>%(Filename)</DependentUpon>
+	  <Compile Update="Project\Doc\DocExamTest\DocExamTestListPage.xaml.cs">
+	    <DependentUpon>DocExamTestListPage.xaml</DependentUpon>
 	  </Compile>
 	  <Compile Update="Project\Doc\DocQuestionAnswer\DocQuestionAnswerListPage.xaml.cs">
 	    <DependentUpon>DocQuestionAnswerListPage.xaml</DependentUpon>
@@ -141,7 +141,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-	  <MauiXaml Update="Project\Doc\DocExamTest\DocUserExamsListPage.xaml">
+	  <MauiXaml Update="Project\Doc\DocExamTest\DocExamTestListPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
 	  <MauiXaml Update="Project\Doc\DocQuestionAnswer\DocQuestionAnswerListPage.xaml">
