--- a/Client/Client.csproj
+++ b/Client/Client.csproj
@@ -252,6 +252,9 @@
 	  <MauiXaml Update="Users\Doc\DocPersonalCabinet\DocPersonalCabinet.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
+	  <MauiXaml Update="Users\Doc\DocTestMenu\DocTestMenu.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	  <MauiXaml Update="Users\Doc\DocTestsFromQuestions\DocTestsFromQuestions.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
