--- a/Client/Client.csproj
+++ b/Client/Client.csproj
@@ -105,6 +105,7 @@
 	<ItemGroup>
 		<PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="7.0.0" />
 		<PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+		<PackageReference Include="System.Drawing.Common" Version="5.0.0" />
 	</ItemGroup>
 
 	<ItemGroup>
