--- a/Client/Platforms/iOS/Info.plist
+++ b/Client/Platforms/iOS/Info.plist
@@ -28,5 +28,11 @@
 	</array>
 	<key>XSAppIconAssets</key>
 	<string>Assets.xcassets/appicon.appiconset</string>
+	<key>CFBundleShortVersionString</key>
+	<string>1</string>
+	<key>MinimumOSVersion</key>
+	<string>11.0</string>
+	<key>CFBundleDisplayName</key>
+	<string>ЭкзаменаторCl</string>
 </dict>
 </plist>
